tests/expectations/compiler/mappings/shadowed_mapping_fail.out
Error [EAST0372017]: The name `one` is defined multiple times.
    --> compiler-test:3:5
     |
   2 |       mapping one: field => field;
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ previous definition of `one` here
   3 |       mapping one: field => field;
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `one` redefined here
